Center grid and add button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     </head>
 
     <body>
+        <div class="button">
+            <button>Clear and create new grid</button>
+        </div>
         <div id="container">
-            
+
         </div>
     </body>
 </html>
